# painel-jeton

./: README.md  app.py  pyproject.toml  requirements.txt
dados/: base_jeton_2025_2026.csv
